--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@ url:
 # Enter the following platform usernames if you would like for them to appear on your site.
 # Remove the hashtag symbol and then enter the username, without the @ symbol or quotation marks. Only the bio is in quotation marks.
 owner:
-  name: Your Name
+  name: Onkar Phadnavis
   avatar: bio-photo.jpg
   bio: "A brief description of yourself."
-  email: #emailaddress
+  email: onkar.phadnavis@gmail.com
   disqus-shortname:
   twitter: #username
   facebook: #username
