--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url:
 owner:
   name: Onkar Phadnavis
   avatar: bio-photo.jpg
-  bio: "A brief description of yourself."
+  bio: "Onkar Phadnavis is a Associate Chartered Account. He is a bachelor of commerce from Mumbai University. He is working with National Stock Exchange of India Limited.."
   email: onkar.phadnavis@gmail.com
   disqus-shortname:
   twitter: #username
